# blocs

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
extensions/: README.md  blocs_coroutine.h  blocs_fmod.h  blocs_imgui.h
include/: blocs.h
include/blocs/: common.h  coroutine.h  game.h  time.h
include/blocs/classic/: README.md  component.h  entity.h  world.h
include/blocs/debug/: README.md  imgui.h  tests.h
include/blocs/debug/explorer/: monitor.h  network.h  serializer.h
include/blocs/ecs/: README.md  sparse.h  world.h
include/blocs/ecs/components/: component.h  componentarray.h  componentmanager.h
include/blocs/ecs/entities/: entity.h  entitymanager.h
include/blocs/ecs/resources/: resource.h  resourcemanager.h
include/blocs/ecs/systems/: system.h  systemmanager.h
include/blocs/graphics/: README.md  font.h  image.h  renderer.h  rendertarget.h  shader.h  shadermanager.h  spriteatlas.h  spritebatch.h  spritefont.h  texture.h
include/blocs/math/: calc.h  color.h  matrix.h  shapes.h  vec.h
include/blocs/platform/: filesystem.h  input.h  platform.h
libs/stb/src/: stb.c
src/: game.cpp  input.cpp
